--- a/sandbox-springboot/pom.xml
+++ b/sandbox-springboot/pom.xml
@@ -143,15 +143,11 @@
             <artifactId>htmlunit</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.aio.portable</groupId>-->
-<!--            <artifactId>swiss</artifactId>-->
-<!--            <version>1.1.4-SNAPSHOT</version>-->
-<!--        </dependency>-->
+
         <dependency>
             <groupId>com.aio.portable</groupId>
             <artifactId>spring-boot-starter-swiss</artifactId>
-            <version>1.1.5-SNAPSHOT</version>
+            <version>1.1.20-SNAPSHOT</version>
         </dependency>
 
 <!--        <dependency>-->
@@ -202,6 +198,36 @@
             <version>1.3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.client</artifactId>
+            <version>1.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.protocol</artifactId>
+            <version>1.1.5</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.otter</groupId>-->
+<!--            <artifactId>canal.common</artifactId>-->
+<!--            <version>1.1.5</version>-->
+<!--        </dependency>-->
+
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
+        <dependency>
+            <groupId>org.springframework.statemachine</groupId>
+            <artifactId>spring-statemachine-core</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
