--- a/sandbox-springboot/src/main/resources/application.properties
+++ b/sandbox-springboot/src/main/resources/application.properties
@@ -29,45 +29,45 @@ spring.jackson.serialization.indent-output=true
 swagger.enable=true
 
 
-# Redis
-# RedisÊý¾Ý¿âË÷Òý£¨Ä¬ÈÏÎª0£©
-spring.redis.database=0
-# Redis·þÎñÆ÷µØÖ·
-spring.redis.host=47.94.141.182
-# Redis·þÎñÆ÷Á¬½Ó¶Ë¿Ú
-spring.redis.port=6379
-# Redis·þÎñÆ÷Á¬½ÓÃÜÂë£¨Ä¬ÈÏÎª¿Õ£©
-spring.redis.password=
-# Á¬½Ó³Ø×î´óÁ¬½ÓÊý£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£©
-spring.redis.pool.max-active=8
-# Á¬½Ó³Ø×î´ó×èÈûµÈ´ýÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£©
-spring.redis.pool.max-wait=-1
-# Á¬½Ó³ØÖÐµÄ×î´ó¿ÕÏÐÁ¬½Ó
-spring.redis.pool.max-idle=8
-# Á¬½Ó³ØÖÐµÄ×îÐ¡¿ÕÏÐÁ¬½Ó
-spring.redis.pool.min-idle=0
-# Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
-spring.redis.timeout=0
+## Redis
+## Redisï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¬ï¿½ï¿½Îª0ï¿½ï¿½
+#spring.redis.database=0
+## Redisï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö·
+#spring.redis.host=47.94.141.182
+## Redisï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó¶Ë¿ï¿½
+#spring.redis.port=6379
+## Redisï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ë£¨Ä¬ï¿½ï¿½Îªï¿½Õ£ï¿½
+#spring.redis.password=
+## ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½
+#spring.redis.pool.max-active=8
+## ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½Ê±ï¿½ä£¨Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½
+#spring.redis.pool.max-wait=-1
+## ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+#spring.redis.pool.max-idle=8
+## ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½Ð¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+#spring.redis.pool.min-idle=0
+## ï¿½ï¿½ï¿½Ó³ï¿½Ê±Ê±ï¿½ä£¨ï¿½ï¿½ï¿½ë£©
+#spring.redis.timeout=0
 
 
 # log
 logging.file=springbootdemo_log.log
-logging.level.=INFO
-logging.level.com.sandbox.springboot.SpringbootSandboxApplication=INFO
+#logging.level.=INFO
+#logging.level.com.sandbox.springboot.SpringbootSandboxApplication=INFO
 
 #logback.logdir:
 logback.appname: sell
 
 
-management.security.enabled=false
+#management.security.enabled=false
 
 
 
 
 
-spring.application.name=spirng-boot-rabbitmq
+spring.application.name=spring-boot-rabbitmq
 
-spring.rabbitmq.host=47.104.190.82
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=adm
-spring.rabbitmq.password=1
+#spring.rabbitmq.host=47.104.190.82
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=adm
+#spring.rabbitmq.password=1
