--- a/sandbox-springboot/src/main/resources/application.yml
+++ b/sandbox-springboot/src/main/resources/application.yml
@@ -1,19 +1,22 @@
 spring:
-  redis:
-    host: 192.168.155.150
-    port: 6379
-    password: Yixin4redis
+#  redis:
+#    host: 192.168.155.150
+#    port: 6379
+#    password: Yixin4redis
+#
+#  data:
+#    elasticsearch:
+#      cluster-name: elasticsearch
+#      cluster-nodes: 1.104.190.82:9300 #, 47.104.190.82:9300
+#      repositories:
+#        enabled: true
+#    neo4j:
+#      uri: bolt://localhost:7687
+#      username: neo4j
+#      password: 1
 
-  data:
-    elasticsearch:
-      cluster-name: elasticsearch
-      cluster-nodes: 1.104.190.82:9300 #, 47.104.190.82:9300
-      repositories:
-        enabled: true
-    neo4j:
-      uri: bolt://localhost:7687
-      username: neo4j
-      password: 1
+
+
 #      rest:
 #        uri: http://localhost:7474
 #      mybatis:
