--- a/seata/src/main/resources/application.yaml
+++ b/seata/src/main/resources/application.yaml
@@ -22,9 +22,10 @@ seata:
     type: nacos
     nacos:
       application:  ${spring.application.name}
-      server-addr: mecs.com:8848    # 127.0.0.1:8801,127.0.0.1:8802,127.0.0.1:8803
+      server-addr: mecs.com:18848    # 127.0.0.1:8801,127.0.0.1:8802,127.0.0.1:8803
       group: SEATA_GROUP
-      namespace: ""
+      namespace: "e7b36452-a2a2-4c3b-a201-b26890d3ddfb"
+      # e7b36452-a2a2-4c3b-a201-b26890d3ddfb
       username: "nacos"
       password: "nacos"
 
@@ -35,7 +36,7 @@ seata:
     nacos:
       server-addr: mecs.com:8848    # 127.0.0.1:8801,127.0.0.1:8802,127.0.0.1:8803
       group: SEATA_GROUP
-#      namespace: ""
+      namespace: "e7b36452-a2a2-4c3b-a201-b26890d3ddfb"
       username: "nacos"
       password: "nacos"
 
